樣式｜列表標頭、口罩卡片

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -13,5 +13,12 @@
 @import '@/assets/scss/components/inputs.scss';
 @import '@/assets/scss/components/search-bar.scss';
 @import '@/assets/scss/components/result-list.scss';
+@import '@/assets/scss/components/available-cal.scss';
+@import '@/assets/scss/components/data-detail.scss';
+@import '@/assets/scss/components/corner.scss';
+@import '@/assets/scss/components/pharmacy-card.scss';
+@import '@/assets/scss/components/amt-box.scss';
+@import '@/assets/scss/components/pharmacy-info.scss';
+@import '@/assets/scss/components/list.scss';
 
 @import '@/assets/scss/layout/my-header.scss';
