樣式｜footer、整體佈局

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -20,5 +20,9 @@
 @import '@/assets/scss/components/amt-box.scss';
 @import '@/assets/scss/components/pharmacy-info.scss';
 @import '@/assets/scss/components/list.scss';
+@import '@/assets/scss/components/data-panel.scss';
+@import '@/assets/scss/components/my-footer.scss';
+@import '@/assets/scss/components/map-panel.scss';
 
 @import '@/assets/scss/layout/my-header.scss';
+@import '@/assets/scss/layout/main-container.scss';
