--- a/src/assets/scss/components/_search-bar.scss
+++ b/src/assets/scss/components/_search-bar.scss
@@ -5,11 +5,13 @@
 .search-input-box {
     position: relative;
     margin-right: 10px;
+    flex: 1 1 auto;
 }
 
 .search-input {
     padding: 10px 50px 10px 10px;
     height: 100%;
+    width: 100%;
     font-size: 1rem;
 }
 
