--- a/src/assets/scss/components/_navigator.scss
+++ b/src/assets/scss/components/_navigator.scss
@@ -1,6 +1,6 @@
 .nav-target {
     display: inline-block;
-    padding: 10px 10px 20px 10px;
+    padding: 10px;
     position: relative;
     cursor: pointer;
     
@@ -12,7 +12,7 @@
             height: 8px;
             background-color: map-get($theme-color, pmr);
             position: absolute;
-            bottom: 0;
+            bottom: -10px;
             left: 0;
             border-radius: 6px 6px 0 0;
         }
