功能｜點擊按鈕資料更新 功能｜顯示當日可購買人為奇數、偶數或全民 架構、樣式｜跳窗 功能｜跳窗開合

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -23,6 +23,7 @@
 @import '@/assets/scss/components/data-panel.scss';
 @import '@/assets/scss/components/my-footer.scss';
 @import '@/assets/scss/components/map-panel.scss';
+@import '@/assets/scss/components/modal.scss';
 
 @import '@/assets/scss/layout/my-header.scss';
 @import '@/assets/scss/layout/main-container.scss';
