--- a/src/assets/scss/components/_data-panel.scss
+++ b/src/assets/scss/components/_data-panel.scss
@@ -3,6 +3,7 @@
     padding: 20px 30px;
     height: 100%;
     overflow-y: scroll;
+    position: relative;
 
     >*:not(:last-child) {
         margin-bottom: 20px;
