功能｜地圖判斷顯示所在地或預設地點、地圖顯示販售口罩藥局

--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -5,10 +5,12 @@
     left: 0;
     top: 0;
     background-color: rgba(#000, .8);
-    z-index: 20;
+    z-index: 9999;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    color: #fff;
 }
 
 .modal-content {
