功能｜地圖的marker依營業狀態區分顏色、點擊marker跳出popup顯示藥局資訊及口罩數量

--- a/src/assets/scss/components/_pharmacy-info.scss
+++ b/src/assets/scss/components/_pharmacy-info.scss
@@ -26,12 +26,13 @@
     }
 }
 
-.pharmacy-distance {
-    align-self: flex-end;
-}
-
 .pharmacy-status {
     padding: 3px 5px;
+}
+
+.pharmacy-distance,
+.pharmacy-status {
+    flex: 0 0 auto;
 }
 
 .pharmacy-detail-list-item {
