--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -24,6 +24,7 @@
 @import '@/assets/scss/components/my-footer.scss';
 @import '@/assets/scss/components/map-panel.scss';
 @import '@/assets/scss/components/modal.scss';
+@import '@/assets/scss/components/map-popup.scss';
 
 @import '@/assets/scss/layout/my-header.scss';
 @import '@/assets/scss/layout/main-container.scss';
