功能｜依輸入之關鍵字提供篩選出相關選項 功能｜依據搜尋進行篩選 功能（修）｜修復點選口罩卡片跳轉時，若點擊較遠的地點無法即時顯示popup的問題

--- a/src/assets/scss/components/_result-list.scss
+++ b/src/assets/scss/components/_result-list.scss
@@ -6,6 +6,9 @@
     border-width: 0 1px 1px 1px;
     border-style: solid;
     border-color: map-get($theme-color, unavailable);
+    z-index: 20;
+    max-height: 50vh;
+    overflow-y: scroll;
 }
 
 .result-list-item {
