功能｜點選導覽列頁籤進行切換

--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -41,7 +41,7 @@ body {
     &-color {
         @each $key, $val in $theme-color {
             &-#{$key} {
-                color: $val;
+                color: $val !important;
             }
         }
     }
