--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -11,10 +11,13 @@
     align-items: center;
     text-align: center;
     color: #fff;
+    overflow-y: scroll;
+    padding: 60px 0;
 }
 
 .modal-content {
-    width: 80%;
+    max-width: 80%;
+    max-height: 100%;
     position: relative;
 
     >*:not(.modal-close) {
