功能（修）｜點擊「重整列表」時重新讀取並篩選口罩卡片

--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -33,7 +33,7 @@
                 border: 2px solid $val;
                 color: $val;
 
-                &:hover {
+                &:not(:disabled):hover {
                     background-color: rgba($val, .1);
                 }
 
