樣式｜手機版樣式 功能｜點擊定位按鈕，將地圖中心返回使用者目前所在位置 其他｜移除Vue Router

--- a/src/assets/scss/components/_logo-box.scss
+++ b/src/assets/scss/components/_logo-box.scss
@@ -9,3 +9,25 @@
     display: inline-block;
     vertical-align: middle;
 }
+
+.logo-box {
+    transition: all .3s;
+    @include rwd(mobile) {
+        padding: 10px;
+        width: 100%;
+    }
+
+    &.active {
+        background-color: map-get($theme-color, pmr);
+        
+        .logo-title {
+            color: #fff !important;
+        }
+    }
+}
+
+.nav-toggler {
+    width: 40px;
+    vertical-align: middle;
+    float: right;
+}
