--- a/src/assets/scss/components/_data-panel.scss
+++ b/src/assets/scss/components/_data-panel.scss
@@ -17,3 +17,15 @@
     padding: 10px;
 }
 
+.locate-cur-pos {
+    background-image: url('~@/assets/img/ic_location.png');
+    background-size: 25px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    bottom: 20px;
+    left: 10px;
+    z-index: 20;
+}
