--- a/src/assets/scss/layout/_my-header.scss
+++ b/src/assets/scss/layout/_my-header.scss
@@ -3,4 +3,10 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+
+    @include rwd(mobile) {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0;
+    }
 }
