--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
+    // position: fixed;
     left: 0;
     top: 0;
     background-color: rgba(#000, .8);
