--- a/src/styles/components/_result-list.scss
+++ b/src/styles/components/_result-list.scss
@@ -20,7 +20,7 @@
         border-bottom: 1px solid map-get($theme-color, unavailable);
     }
 
-    &:hover {
+    &:hover, &.active {
         background-color: #f5f2f2;
     }
 }
