樣式｜header、主要面板樣式微調 功能｜將獲取使用者所在地功能自MyMap元件抽出 功能｜新增當api獲取失敗之處理

--- a/src/styles/components/_navigator.scss
+++ b/src/styles/components/_navigator.scss
@@ -36,5 +36,8 @@
     @include rwd(mobile) {
         width: 100%;
         background-color: map-get($theme-color, pmr);
+        position: absolute;
+        z-index: 999;
+        top: map-get($header-height, mobile);
     }
 }
