--- a/src/styles/layout/_my-header.scss
+++ b/src/styles/layout/_my-header.scss
@@ -2,9 +2,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 0 10px;
+    height: map-get($header-height, basic);
+    position: relative;
 
     @include rwd(mobile) {
+        height: map-get($header-height, mobile);
         flex-direction: column;
         align-items: flex-start;
         padding: 0;
