--- a/src/styles/components/_result-list.scss
+++ b/src/styles/components/_result-list.scss
@@ -8,6 +8,7 @@
     border-color: map-get($theme-color, unavailable);
     z-index: 20;
     max-height: 50vh;
+    max-height: calc(#{var(--vh)} * 50);
     overflow-y: scroll;
 }
 
